<resources>
    <string name="app_name">KeepItUp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_general">General</string>
    <string name="menu_warranty">Warranty</string>
    <string name="menu_login">Backup</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_provider">Providers</string>
    <string name="menu_insure">Insurance</string>
    <string name="img_select">Select Option</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="emptyWarning">Company can not be empty!</string>
    <string name="delete">DELETE!</string>
    <string name="edit">EDIT</string>
    <string name="name">Name: </string>
    <string name="notification_title">Don\'t forget!</string>
    <string name="not_title">Notification time </string>
    <string name="company_title">Company </string>
    <string name="startDate_title">Start Date </string>
    <string name="endDate_title">End Date </string>
    <string name="notes_title">Notes </string>
    <string name="price_title">Total Price </string>
    <string name="charge_title">Charge Type </string>
    <string name="newTrans_title">New Transaction </string>
    <string name="fromTo">-</string>
    <string name="totalImg">Total Images: </string>
    <string name="backUpDone">Backup completed</string>
    <string name="restoreDone">Restore completed</string>
    <string name="invalidDate">Invalid date!</string>
    <string name="invalidName">Invalid name!</string>
    <string name="invalidEndDate">End date is necessary for notification!</string>
    <string name="transAdded">Transaction was added!</string>
    <string name="numOfImg">Num Of Images: </string>
    <string name="login">Login</string>
    <string name="add">ADD</string>
    <string name="OK">OK</string>
    <string name="hello">Hello</string>
    <string name="ecxMark"> !</string>
    <string name="helloGuest">Hello Guest!</string>
    <string name="transUpdate">Transaction was updated!</string>
    <string name="areYouSure">Are you sure you would like to remove</string>
    <string name="QuestMark"> \? </string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>
    <string name="notificationForward_title">Forward Notification</string>
    <string name="name_title">Name</string>
    <string name="type_title">Type</string>
    <string name="sort_by">Sort by</string>
    <string name="edit">EDIT</string>
</resources>
