<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afeka.keepitup.keepitup.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:gravity="top|center_horizontal"
            android:text="@string/backup"
            android:textSize="36sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/companyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Company" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/restoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="restoreFromFirebase"
                android:text="@string/restore" />

            <Button
                android:id="@+id/backupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="backupToFirebase"
                android:text="@string/backup" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkLogin"
            android:text="@string/sign_in" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
