<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebackground"
    xmlns:fontPath="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="com.afeka.keepitup.keepitup.TransactionShowFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTintMode="screen"
                    android:fontFamily="@font/revolution"
                    android:padding="3dp"
                    android:text="TextView"
                    android:textSize="36sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/company_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/company_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/company_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/company_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startDate_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/startDate_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fromDate_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/endDate_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/endDate_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/toDate_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/price_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notification_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/price_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/notification_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/not_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/notification_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="TextView"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/charge_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/charge_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/charge_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/charge_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="TextView"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notes_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notes_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/notes_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/notes_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="TextView"
                    android:textSize="18sp" />


            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/watchImg_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@id/edit_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/gallery_icon"/>
        <Button
            android:id="@+id/edit_button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/button"
            android:fontFamily="@font/revolution"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="EDIT"
            android:textSize="20sp"
            android:paddingTop="12dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>



</FrameLayout>
